--- a/plantsuwa/app/views/current_plants/index.html.erb
+++ b/plantsuwa/app/views/current_plants/index.html.erb
@@ -3,12 +3,12 @@
 <% provide(:prev_link, root_path) %>
 
 
-<div class="plant-index-tab" style="background: #FFF8D9; position: fixed">
+<div class="plant-index-tab" style="background: #FFF8D9; position: fixed; top: 50px;">
   <p><strong>Climbers</strong></p>
 </div>
 
 <!-- To allow for space for the group headings -->
-<div style="height: 24px"></div>
+<div style="height: 10px"></div>
 
 <% @current_plants.each do |plant| %>
 
