--- a/plantsuwa/app/views/current_plants/new.html.erb
+++ b/plantsuwa/app/views/current_plants/new.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, 'New Plant') %>
+<% provide(:prev_page, 'List') %>
+<% provide(:prev_link, current_plants_path) %>
 
 <%= render 'form' %>
  
