--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
 
             <% if !yield(:prev_page).blank? %>
               <%= link_to yield(:prev_link) do %>
-                <p class="navbar-brand navbar-prev-page-block"><span class="glyphicon glyphicon-chevron-left" style="color: #aaa"></span>&nbsp;&nbsp;<%= yield(:prev_page) %></p>
+                <p class="navbar-brand navbar-prev-page-block"><span class="glyphicon glyphicon-chevron-left" style="color: #aaa"></span>&nbsp;&nbsp;<%= truncate(yield(:prev_page), length: 15) %></p>
               <% end %>
             <% else %>
               <%= link_to 'http://www.uwa.edu.au', target: '_blank' do %>
@@ -20,7 +20,7 @@
 
 
               <div class="navbar-brand navbar-title-block">
-              <p style="text-align: center; color: white"><strong><%= small_title(yield(:title)) %></strong></p>
+              <p style="text-align: center; color: white"><strong><%= truncate(small_title(yield(:title)), length: 18) %></strong></p>
               </div>
 
 
