--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -106,7 +106,7 @@ label {
 }
 
 .help-block {
-  margin-bottom: 0px;
+  margin-bottom: 0px !important;
 }
 
 
@@ -115,16 +115,23 @@ textarea {
 }
 
 .info-tab {
-  width: 14.285714286%;
-  border-top: 2px solid #ccc;
-  border-bottom: 2px solid #ccc;
-  float: left;
-  padding: 0 5px;
-  padding-top: 7px;
-  border-right: 1px solid #ccc;
-  background: #eee;
-	box-shadow: 0px 2px 8px #ccc;
+  width: 25%;
 
+  float: left;
+  padding: 0 7px;
+  padding-top: 9px;
+  border-right: 1px solid #222;
+  background: #eee;
+  position: fixed;
+  bottom: 0;
+  height: 40px;
+
+  background: black;
+
+  background: -webkit-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(#2E2E2E, black, black, #2E2E2E); /* Standard syntax */
 
 }
 
@@ -133,9 +140,14 @@ textarea {
 }
 
 .info-tab-current {
-  background: white;
-  border-bottom: 0;  
-  box-shadow: none;
+
+  background: #268BFF;
+
+  background: -webkit-linear-gradient(#5CA8FF, #268BFF, #268BFF, #5CA8FF); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(#5CA8FF, #268BFF, #268BFF, #5CA8FF); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(#5CA8FF, #268BFF, #268BFF, #5CA8FF); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(#5CA8FF, #268BFF, #268BFF, #5CA8FF); /* Standard syntax */
+
 }
 
 .info-tab-current:hover {
@@ -143,7 +155,7 @@ textarea {
 }
 
 .info-tab-disabled {
-  background: #ddd;
+
 }
 
 .info-tab-disabled:hover {
@@ -153,11 +165,12 @@ textarea {
 .info-tab p {
 	font-family: 'Montserrat', sans-serif;
   text-align: center;
-  font-size: x-small;
+  font-size: small;
+  color: white;
 }
 
 .info-tab-disabled p {
-	color: gray;
+	color: #333;
 }
 
 .center-wrapper {
@@ -174,24 +187,32 @@ textarea {
 
 
 .info-body {
-  min-height: 400px;
+  min-height: 100px;
 }
+
+.info-body p {
+  margin-left: 10px;
+  margin-bottom: 20px;
+}
+
 
 
 
 .action-tab {
   width: 50%;
-  border-top: 2px solid #ccc;
-  border-bottom: 2px solid #ccc;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
   float: left;
   padding: 3px 5px;
 
   border-right: 1px solid #ccc;
   background: #eee;
-	box-shadow: 0 -2px 8px #ccc;  
+
+	/*box-shadow: 0 -2px 8px #ccc;  */
+ 
   position: fixed;
   height: 30px;
-  bottom: 50px;
+  bottom: 40px;
   left: 0;
 }
 
@@ -222,15 +243,15 @@ textarea {
 }
 
 
-
+/*
 #bottom-nav-mobile {
 
   background: black;
 
-  background: -webkit-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Safari 5.1 to 6.0 */
-	background: -o-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Opera 11.1 to 12.0 */
-	background: -moz-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Firefox 3.6 to 15 */
-	background: linear-gradient(#2E2E2E, black, black, #2E2E2E); /* Standard syntax */
+  background: -webkit-linear-gradient(#2E2E2E, black, black, #2E2E2E);
+	background: -o-linear-gradient(#2E2E2E, black, black, #2E2E2E);
+	background: -moz-linear-gradient(#2E2E2E, black, black, #2E2E2E);
+	background: linear-gradient(#2E2E2E, black, black, #2E2E2E);
 
 	
 	width: 100%;
@@ -242,6 +263,7 @@ textarea {
 	
 	
 }
+
 
 .bottom-nav-box {
 	height: 100%;
@@ -268,6 +290,7 @@ textarea {
   margin-top: 4px;
   padding: 0 3px;
 }
+*/
 
 .form-photo-box {
   border: 1px solid #ccc;
