--- a/plantsuwa/app/views/current_plants/edit.html.erb
+++ b/plantsuwa/app/views/current_plants/edit.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, 'Edit Plant') %>
+<% provide(:prev_page, @current_plant.name) %>
+<% provide(:prev_link, current_plant_path(:id => @current_plant.id)) %>
 
 <%= render 'form' %>
  
