--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -14,7 +14,7 @@
 		  <% if not @current_plant.genus.blank? %>
 			  <dt>Genus</dt><p><%= @current_plant.genus %></p>
 		  <% end %>
-		  <% if @current_plant.family.blank? %>
+		  <% if not @current_plant.family.blank? %>
 			  <dt>Family</dt><p><%= @current_plant.family %></p>
 		  <% end %>
 		  <% if not @current_plant.species.blank? %>
