began search page and added seed data

--- a/plantsuwa/app/views/welcome/index.html.erb
+++ b/plantsuwa/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
 
 
       <%= link_to 'Browse Plants', current_plants_path, class: 'btn btn-default btn-welcome' %><br/><br/>
-      <%= link_to 'Search Plants', current_plants_path, class: 'btn btn-default btn-welcome' %><br/><br/>
+      <%= link_to 'Search Plants', current_plants_search_path, class: 'btn btn-default btn-welcome' %><br/><br/>
   
 			<% if signed_in? %>
 
