added a few different sizes for photos, like thumbnails

--- a/plantsuwa/app/views/current_plants/index.html.erb
+++ b/plantsuwa/app/views/current_plants/index.html.erb
@@ -14,7 +14,7 @@
 
   <div class="plant-index-box">
     <div class="plant-index-box-photo">
-	    <%= image_tag plant.display_photo.url, width:"63px", height:"63px", alt:"Plant photo" %>
+	    <%= image_tag plant.display_photo.url(:thumb), width:"63px", height:"63px", alt:"Plant photo" %>
     </div>
     <div class="plant-index-box-content">
       <div class="center-wrapper">
