--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -263,6 +263,15 @@ textarea {
   background: #eee;
 }
 
+.search {
+  width: 100%;
+  margin: 0 10%;
+  padding: 20px ;
+  font-size: medium;
+	font-family: 'Montserrat', sans-serif;
+  background: #eee;
+}
+
 
 
 .plant-index-box {
